<resources>
    <string name="app_name">Minha Empresa</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="cargo">Cargo</string>
    <string name="nivel_de_experiencia">Nivel de Expêriencia</string>
    <string name="salvar">SALVAR</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="comercial">Comercial</string>
    <string name="desenvolvimento">Desenvolvimento</string>
    <string name="suporte_t">Suporte T.</string>
    <string name="administrativo">Administrativo</string>
    <string name="telefone_que_representa_o_suporte_tec">Telefone que representa o Suporte Tec</string>
    <string name="botao_adicionar_colaborador">Botao adicionar colaborador</string>
    <string name="seta_spinner">Seta Spinner</string>
    <string name="notas_representando_o_comercial">Notas representando o comercial</string>
    <string name="computador_representando_o_dev">Computador representando o Dev</string>
    <string name="telefone_representando_o_suporte">Telefone representando o suporte</string>
    <string name="grupo_de_pessoas_representando_o_admin">Grupo de pessoas representando o admin</string>
    <string name="digitos_nome">\"abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020"</string>
</resources>