<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CadastroColaboradoresActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintFilho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            andriod:layout_constraintBottom_toBottomOf="parent"

            >

            <EditText
                android:id="@+id/editText_form_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="name"/>

            <EditText
                android:id="@+id/editText_form_sobrenome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/sobrenome"
                android:inputType="textCapWords"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_form_nome"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView_form_cargo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cargo"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_form_data_nascimento" />

            <Spinner
                android:id="@+id/spinner_form"
                style=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="#ebebeb"
                android:minHeight="48dp"
                android:paddingVertical="18dp"
                android:popupBackground="#ebebeb"
                app:layout_constraintEnd_toEndOf="@+id/textView_form_cargo"
                app:layout_constraintStart_toStartOf="@+id/textView_form_cargo"
                app:layout_constraintTop_toBottomOf="@+id/textView_form_cargo"
                tools:ignore="SpeakableTextPresentCheck" />

            <RatingBar
                android:id="@+id/ratingBar_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:numStars="5"
                android:progressBackgroundTint="#48575757"
                android:progressTint="#E4E14B"
                android:rating="1.0"
                android:secondaryProgressTint="#E4E14B"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="@+id/textView_form_nivel_experiencia"
                app:layout_constraintStart_toStartOf="@+id/textView_form_nivel_experiencia"
                app:layout_constraintTop_toBottomOf="@+id/textView_form_nivel_experiencia"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView_form_nivel_experiencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/nivel_de_experiencia"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/spinner_form"
                app:layout_constraintStart_toStartOf="@+id/spinner_form"
                app:layout_constraintTop_toBottomOf="@+id/spinner_form" />

            <ImageView
                android:id="@+id/imageView_form_seta"
                android:layout_width="28dp"
                android:layout_height="22dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/seta_spinner"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_form"
                app:layout_constraintEnd_toEndOf="@+id/spinner_form"
                app:layout_constraintTop_toTopOf="@+id/spinner_form"
                app:srcCompat="@drawable/down_arrow" />

            <Button
                android:id="@+id/button_form_salvar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/salvar"
                android:textSize="20sp"
                andriod:layout_constraintTop_toBottomOf="@id/ratingBar_form"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editText_form_data_nascimento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:focusable="false"
                android:hint="@string/data_de_nascimento"
                android:minHeight="48dp"
                android:onClick="showDatePickerDialog"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/editText_form_sobrenome"
                app:layout_constraintStart_toStartOf="@+id/editText_form_sobrenome"
                app:layout_constraintTop_toBottomOf="@+id/editText_form_sobrenome"
                tools:ignore="UsingOnClickInXml,TextContrastCheck"
                android:inputType="date"
                android:importantForAutofill="no" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>