<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.activity.TelaInicial">

            <TextView
                android:id="@+id/textView_telaInicial_comercial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/comercial"
                app:layout_constraintEnd_toEndOf="@+id/imageView_telaInicial_comercial"
                app:layout_constraintStart_toStartOf="@+id/imageView_telaInicial_comercial"
                app:layout_constraintTop_toBottomOf="@+id/imageView_telaInicial_comercial" />

            <ImageView
                android:id="@+id/imageView_telaInicial_comercial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@id/imageView_telaInicial_dev"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/money" />

            <ImageView
                android:id="@+id/imageView_telaInicial_dev"
                android:layout_width="105dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_telaInicial_comercial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView_telaInicial_comercial"
                app:layout_constraintTop_toTopOf="@+id/imageView_telaInicial_comercial"
                app:srcCompat="@drawable/imac" />

            <TextView
                android:id="@+id/textView_telaInicial_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/desenvolvimento"
                app:layout_constraintBottom_toBottomOf="@+id/textView_telaInicial_comercial"
                app:layout_constraintEnd_toEndOf="@+id/imageView_telaInicial_dev"
                app:layout_constraintStart_toStartOf="@+id/imageView_telaInicial_dev"
                app:layout_constraintTop_toBottomOf="@+id/imageView_telaInicial_dev" />

            <ImageView
                android:id="@+id/imageView_telaInicial_suporte"
                android:layout_width="70dp"
                android:layout_height="74dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/imageView_telaInicial_comercial"
                app:layout_constraintStart_toStartOf="@+id/imageView_telaInicial_comercial"
                app:layout_constraintTop_toBottomOf="@+id/totalComercial"
                app:srcCompat="@drawable/call" />

            <TextView
                android:id="@+id/textView_telaInicial_suporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/suporte_t"
                app:layout_constraintEnd_toEndOf="@+id/imageView_telaInicial_suporte"
                app:layout_constraintStart_toStartOf="@+id/imageView_telaInicial_suporte"
                app:layout_constraintTop_toBottomOf="@+id/imageView_telaInicial_suporte" />

            <TextView
                android:id="@+id/totalComercial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView_telaInicial_comercial"
                app:layout_constraintStart_toStartOf="@+id/textView_telaInicial_comercial"
                app:layout_constraintTop_toBottomOf="@+id/textView_telaInicial_comercial"
                tools:text="20" />

            <TextView
                android:id="@+id/totalDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/totalComercial"
                app:layout_constraintEnd_toEndOf="@+id/textView_telaInicial_dev"
                app:layout_constraintStart_toStartOf="@+id/textView_telaInicial_dev"
                app:layout_constraintTop_toBottomOf="@+id/textView_telaInicial_dev"
                tools:text="35" />

            <ImageView
                android:id="@+id/imageView_telaInicial_admin"
                android:layout_width="99dp"
                android:layout_height="85dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_telaInicial_suporte"
                app:layout_constraintEnd_toEndOf="@+id/imageView_telaInicial_dev"
                app:layout_constraintStart_toStartOf="@+id/imageView_telaInicial_dev"
                app:layout_constraintTop_toBottomOf="@+id/totalDev"
                app:srcCompat="@drawable/peoples1" />

            <TextView
                android:id="@+id/textView_telaInicial_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/administrativo"
                app:layout_constraintBottom_toBottomOf="@+id/textView_telaInicial_suporte"
                app:layout_constraintEnd_toEndOf="@+id/imageView_telaInicial_admin"
                app:layout_constraintStart_toStartOf="@+id/imageView_telaInicial_admin"
                app:layout_constraintTop_toBottomOf="@+id/imageView_telaInicial_admin" />

            <TextView
                android:id="@+id/totalSuporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView_telaInicial_suporte"
                app:layout_constraintStart_toStartOf="@+id/textView_telaInicial_suporte"
                app:layout_constraintTop_toBottomOf="@+id/textView_telaInicial_suporte"
                tools:text="13" />

            <TextView
                android:id="@+id/totalAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/totalSuporte"
                app:layout_constraintEnd_toEndOf="@+id/textView_telaInicial_admin"
                app:layout_constraintStart_toStartOf="@+id/textView_telaInicial_admin"
                app:layout_constraintTop_toBottomOf="@+id/textView_telaInicial_admin"
                tools:text="7" />

            <View
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_marginTop="5dp"
                android:background="#ebebeb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalSuporte" />

            <TextView
                android:id="@+id/totalColaboradores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Colaboradores 317" />

            <TextView
                android:id="@+id/textView_telaInicial_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar_telaInicial_media"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ratingBar_telaInicial_media"
                tools:text=" 3.0" />

            <RatingBar
                android:id="@+id/ratingBar_telaInicial_media"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="178dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:max="5"
                android:numStars="5"
                android:progressBackgroundTint="#959494"
                android:progressTint="#e4e14b"
                android:rating="3.5"
                android:scaleX=".9"
                android:scaleY=".9"
                android:secondaryProgressTint="#e4e14b"
                android:transformPivotX="30dp"
                android:transformPivotY="20dp"
                app:layout_constraintEnd_toEndOf="@+id/totalColaboradores"
                app:layout_constraintStart_toStartOf="@+id/totalColaboradores"
                app:layout_constraintTop_toBottomOf="@+id/totalColaboradores" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintVertical_bias="1.0"
                tools:listitem="@layout/item_colaborador" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/Fab_telaInicial_add_colaborador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:backgroundTint="#e69b67"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@android:color/white"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>